# Shopping-Scans

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/config/: flake8.ini
backend/config/scripts/: sphinx.py  utils.py
backend/src/: teste.py
backend/src/app/entity/: Emitente.py  __init__.py
backend/tests/: test_something.py
config/scripts/: poetry_tools.py  setup.py  setup.sh  toml_tools.py
docs/: conf.py  index.rst
