[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
fastapi = "^0.70.0"
uvicorn = "^0.16.0"
sqlmodel = "^0.0.6"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
Sphinx = "^4.2.0"
m2r2 = "^0.3.1"
sphinx-rtd-theme = "^1.0.0"
pep8-naming = "^0.12.1"
black = "^21.9b0"
isort = "^5.9.3"
toml = "^0.10.2"
poethepoet = "^0.10.0"
flake8 = "^4.0.1"
flake8-blind-except = "^0.2.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.7.0"
flake8-use-fstring = "^1.3"
flake8-length = "^0.2.0"
pytest-sugar = "^0.9.4"
pytest-emoji = "^0.2.0"
pytest-icdiff = "^0.5"
pytest-clarity = "^1.0.1"
pytest-parallel = "^0.1.1"
pytest-deadfixtures = "^2.2.1"
pytest-tldr = "^0.2.4"
types-requests = "^2.26.1"
types-beautifulsoup4 = "^4.10.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
pre_commit_setup = {cmd = "poetry run pre-commit install --overwrite", help = "Install pre-commit hooks"}
pre_commit = {cmd = "poetry run pre-commit run", help = "Run pre-commit check in staged files"}
pre_commit_all = {cmd = "poetry run pre-commit run --all-files", help = "Run pre-commit check in all files"}
tests = {cmd = "poetry run pytest tests/", help = "Run tests"}
docs = {cmd = "poetry run python3 -m config.scripts.sphinx", help = "Generate project HTML docs"}

[tool.black]
color = true
line-length = 88
target-version = [ "py38",]

[tool.isort]
atomic = true
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
plugins = [ "pydantic.mypy",]
pretty = true
python_version = 3.8
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
error_summary = true

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true

# [[tool.mypy.overrides]]
# module = ["src.infra.database.env","src.infra.database.models"]
# disallow_untyped_defs = true
# ignore_errors = true
